# strufi

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/: renovate.json5
.github/actions/setup/: action.yml
.github/workflows/: aqua.yml  ci.yml
